update package.json & gitignore

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "client"
   ],
   "scripts": {
-    "dev": "yarn:dev:server yarn:dev:client",
+    "dev": "concurrently yarn:dev:server yarn:dev:client",
     "dev:server": "cd ./server && concurrently 'vite' 'nodemon server.ts'",
     "dev:client": "cd ./client && vite"
   }
