--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,7 @@
   "main": "src/index.ts",
   "scripts": {
     "start": "clear && yarn build && node build/index.js",
-    "dev": "clear && concurrently 'vite' 'nodemon server.ts'",
+    "dev": "clear && concurrently 'vite' 'nodemon src/server.ts'",
     "build": "concurrently 'vite'",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
