--- a/server/package.json
+++ b/server/package.json
@@ -7,7 +7,9 @@
     "start": "clear && yarn build && node build/index.js",
     "dev": "clear && concurrently 'vite' 'nodemon src/server.ts'",
     "build": "concurrently 'vite'",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "lint": "eslint src/**/*.ts",
+    "format": "eslint src/**/*.ts --fix && prettier --write ."
   },
   "author": "",
   "license": "ISC",
@@ -17,10 +19,14 @@
   "devDependencies": {
     "@types/express": "^4.17.17",
     "@types/node": "^20.3.1",
+    "@typescript-eslint/eslint-plugin": "^5.60.1",
+    "@typescript-eslint/parser": "^5.60.1",
     "concurrently": "^8.2.0",
     "dotenv": "^16.3.1",
+    "eslint": "^8.43.0",
     "nodemon": "^2.0.22",
-    "typescript": "^5.1.3",
+    "prettier": "^2.8.8",
+    "typescript": "^4.4.0",
     "vite": "^4.3.9",
     "vite-plugin-node": "^3.0.2"
   }
