--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,12 @@
 client/node_modules
 server/node_modules
+node_modules
 
 client/.env
 server/.env
 
-/.idea
+.idea/
+
+yarn-debug.log*
+yarn-error.log*
+
