--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   ],
   "scripts": {
     "dev": "concurrently yarn:dev:server yarn:dev:client",
-    "dev:server": "cd ./server && concurrently 'vite' 'nodemon src/server.ts'",
+    "dev:server": "cd ./server && yarn dev",
     "dev:client": "cd ./client && vite"
   }
 }
