--- a/server/package.json
+++ b/server/package.json
@@ -2,10 +2,10 @@
   "name": "server",
   "version": "1.0.0",
   "description": "",
-  "main": "src/index.ts",
+  "main": "src/server.ts",
   "scripts": {
-    "start": "clear && yarn build && node build/index.js",
-    "dev": "clear && concurrently 'vite' 'nodemon src/server.ts'",
+    "start": "clear || cls && yarn build && node build/index.js",
+    "dev": "clear || cls && concurrently 'vite' nodemon",
     "build": "concurrently 'vite'",
     "test": "echo \"Error: no test specified\" && exit 1",
     "lint": "eslint src/**/*.ts",
@@ -14,7 +14,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "mysql2": "^3.4.2"
   },
   "devDependencies": {
     "@types/express": "^4.17.17",
