--- a/server/package.json
+++ b/server/package.json
@@ -14,8 +14,16 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/cors": "^2.8.13",
+    "@types/express": "^4.17.17",
+    "bcrypt": "^5.1.0",
+    "body-parser": "^1.20.2",
+    "cors": "^2.8.5",
     "express": "^4.18.2",
-    "mysql2": "^3.4.2"
+    "jsonwebtoken": "^9.0.0",
+    "mysql2": "^3.4.2",
+    "passport": "^0.6.0",
+    "passport-jwt": "^4.0.1"
   },
   "devDependencies": {
     "@types/express": "^4.17.17",
