--- a/server/package.json
+++ b/server/package.json
@@ -18,6 +18,7 @@
   "@types/express": "^4.17.17",
   "bcrypt": "^5.1.0",
   "body-parser": "^1.20.2",
+  "cookies-parser": "^1.2.0",
   "cors": "^2.8.5",
   "express": "^4.18.2",
   "jsonwebtoken": "^9.0.0",
@@ -26,6 +27,7 @@
   "passport-jwt": "^4.0.1"
  },
  "devDependencies": {
+  "@types/bcrypt": "^5.0.0",
   "@types/express": "^4.17.17",
   "@types/node": "^20.3.1",
   "@typescript-eslint/eslint-plugin": "^5.60.1",
