--- a/server/package.json
+++ b/server/package.json
@@ -18,6 +18,7 @@
   "@types/express": "^4.17.17",
   "bcrypt": "^5.1.0",
   "body-parser": "^1.20.2",
+  "cookie-parser": "^1.4.6",
   "cookies-parser": "^1.2.0",
   "cors": "^2.8.5",
   "express": "^4.18.2",
@@ -28,7 +29,9 @@
  },
  "devDependencies": {
   "@types/bcrypt": "^5.0.0",
+  "@types/cookie-parser": "^1.4.3",
   "@types/express": "^4.17.17",
+  "@types/jsonwebtoken": "^9.0.2",
   "@types/node": "^20.3.1",
   "@typescript-eslint/eslint-plugin": "^5.60.1",
   "@typescript-eslint/parser": "^5.60.1",
